--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -12,7 +12,7 @@
     "rules": {
         "indent": [
             "error",
-            4
+            2
         ],
         "linebreak-style": [
             "error",
@@ -20,7 +20,7 @@
         ],
         "quotes": [
             "error",
-            "single"
+            "double"
         ],
         "semi": [
             "error",
