--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "mongodb": "^6.5.0"
+    "mongodb": "^6.5.0",
+    "moongose": "^1.0.0"
   }
 }
